Fixed up image alignment.

--- a/index.css
+++ b/index.css
@@ -169,17 +169,15 @@ div.textbox2 {
 }
 @media (max-width: 1000px) {
 	img.myself {
-	padding-left: 0px;
 	height: 500px;
-	width: 300px;
-	margin-left: 0px;
-	align-items: center;
+		width: 300px;
+		flex-direction: column;
+		margin-left: auto;
+		margin-right: auto;
+		align-items: center;
 	}
     div.flex1 {   
     flex-direction: column;
-	}
-	div.image1 {
-		text-align: center;
 	}
 	div.textbox1 {
 		padding-right: 0;
